fixed overflow on mobile viewport

--- a/assets/src/sass/frontend/_blog.scss
+++ b/assets/src/sass/frontend/_blog.scss
@@ -1,11 +1,4 @@
 .single {
-  .main {
-    &__title {
-      margin: 0 auto;
-      max-width: 90rem;
-      width: 89vw;
-    }
-  }
   .article {
     &__image {
       margin-bottom: 4rem;
