--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -41,11 +41,3 @@
 @import 'frontend/woocommerce/single-product/product';
 @import 'frontend/woocommerce/single-product/cross-sell';
 */
-
-.container {
-  &--narrow {
-    margin-inline: auto;
-    width: 89vw;
-    max-width: 90rem;
-  }
-}
